--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "Bootstrap4-homepage",
+    "name": "bootstrap4-homepage",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
@@ -11,7 +11,7 @@
     "keywords": [],
     "author": "",
     "license": "ISC",
-    "homepage": "https://jffry93.github.io/shoebox-bootstrap4",
+    "homepage": "https://jffry93.github.io/bootstrap4-homepage",
     "dependencies": {
         "gh-pages": "^3.1.0",
         "jquery": "^3.5.1",
