--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "deploy": "gh-pages -d dist",
+        "deploy": "gh-pages -d src",
         "dev": "parcel src/index.html",
         "prod": "parcel build src/index.html"
     },
